# vcpkg_vendor

./: CMakeLists.txt  README.md  package.xml
env_hook/: vcpkg_vendor_library_path.bat  vcpkg_vendor_library_path.dsv.in
