<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>vcpkg_vendor</name>
  <version>0.0.0</version>
  <description>
    Wrapper around vcpkg.
  </description>
  <maintainer email="michael.eriksen@canvas.build">Michael Eriksen</maintainer>
  <license>Apache License 2.0</license>

  <author email="michael.eriksen@canvas.build">Michael Eriksen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
